[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tome"
version = "0.0.1"
authors = [
  { name="Artyui", email="artyuicraft@gmail.com" },
]
description = "Text Oriented Multi-User Engine"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
